# ntsc-rs

.github/workflows/: build-workspace.yml
crates/gui/: Cargo.toml
crates/gui/locales/: en.yml  zh-CN.yml
crates/gui/src/: lib.rs
crates/gui/src/app/: main.rs  mod.rs  presets.rs  third_party_licenses_dialog.rs  update_dialog.rs
crates/ntscrs/: Cargo.toml
crates/ntscrs/src/: ntsc.rs
xtask/src/: build_ofx_plugin.rs  macos_ae_plugin.rs  macos_bundle.rs
