[package]
name = "ntsc-rs"
version = "0.1.2"
edition = "2024"
license = "MIT OR ISC OR Apache-2.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/ntscrs"

[dependencies]
rand = { version = "0.9.0", default-features = false }
rand_xoshiro = "0.7.0"
fearless_simd = "0.4.0"
num_enum = { version = "0.7.5", default-features = false }
ntsc-rs-macros = {path = "../macros"}
siphasher = "1.0.0"
hifijson = "0.5"
rayon-core = { version = "1.13.0", optional = true }
num_cpus = { version = "1.16.0", optional = true }
sval = { version = "2.14.1", features = ["std"] }
sval_json = { version = "2.14.1", features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
image = { version = "0.25.1", default-features = false, features = ["png"] }

[features]
default = ["rayon"]
rayon = ["dep:rayon-core", "dep:num_cpus"]

[[bench]]
name = "filter_profile"
harness = false

[lints]
workspace = true
